--- a/AssetExplorer/packages.config
+++ b/AssetExplorer/packages.config
@@ -42,4 +42,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="WPFTextBoxAutoComplete" version="1.0.5" targetFramework="net48" />
 </packages>
