--- a/AssetExplorer/packages.config
+++ b/AssetExplorer/packages.config
@@ -29,6 +29,7 @@
   <package id="Microsoft.Extensions.Primitives" version="3.1.4" targetFramework="net48" />
   <package id="MoralesLarios.Utilities" version="1.0.0.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net48" />
+  <package id="NLog" version="4.7.2" targetFramework="net48" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.2" targetFramework="net48" />
   <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net48" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net48" />
@@ -42,5 +43,6 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="Unity" version="5.11.7" targetFramework="net48" />
   <package id="WPFTextBoxAutoComplete" version="1.0.5" targetFramework="net48" />
 </packages>
