Changed the style of History DataGrid, Async/Await for data related functions, changed the icon for Active status(still bugged - need fix)

--- a/AssetExplorer/AssetExplorer.csproj
+++ b/AssetExplorer/AssetExplorer.csproj
@@ -288,6 +288,9 @@
   <ItemGroup>
     <Resource Include="Images\Icon1.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\orangecircle.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
